[project]
name        = "rustman"
description = "Pythonic rust project automation"
authors     = [{name="Tremeschin"}]
version     = "0.1.0"
readme      = ".github/readme.md"
license     = "MIT"
requires-python = ">=3,<4"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rustman"]
